[package]
name = "schedule-map-maker"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4.9.0"
env_logger = "0.11.8"
futures = "0.3.30"
lazy_static = "1.5.0"
log = "0.4.22"
regex = "1.10.6"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.26.0", features = ["full"] }
